grid aligned down from navbar correctly

--- a/Project/assets/css/index.css
+++ b/Project/assets/css/index.css
@@ -3,18 +3,75 @@
   --main-font:"Comfortaa Light";
   --secondary-font:"Book Antiqua";
   --large-font:53px;
+  --nav-height:71px;
+  --break-height:45px; /* Guessitmate */
 }
+
+* {
+  box-sizing: border-box;
+}
+
 body {
+  margin:0;
+}
+
+img {
+  max-width: 100%;
+}
+
+h1 {
+  color: var(--main-color);
+  font: var(--large-font) var(--secondary-font);
+  font-weight: 750;
+}
+
+.segement-1 {
+  display: grid;
+  position: relative;
+  margin-top: var(--nav-height);
+  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+}
+
+.segement-1 .col--100vh {
+  height: calc(100vh - var(--nav-height) - var(--break-height));
+}
+
+.col1 > img {
+  object-fit: cover;
+  height: 100% ;
+  width: 100%;
+}
+
+.col2 h1{
+  place-items: center;
+  margin-left: 5%;
+  margin-right:5%;
+}
+
+.col2 button {
+  display: inline;
+  color: var(--main-color);
+  border:solid 1px var(--main-color);
+  padding: 20px;
+  top: 60%;
+  left:25%;
   margin: 0;
 }
+
 /*
-##################Navigation WIP####################
+######################
+#     Nav bar        #
+######################
 */
+
 nav {
   position: fixed;
   display:flex;
+  top: 0;
+  left: 0;
   width: 100%;
   background-color: #ffffff;
+  z-index: 10;
 }
 
 .navbar{
@@ -28,10 +85,9 @@ nav {
   top: 10px;
   left:0;
   width:100%;
-  height:0.5px;
+  height:1px;
   background: var(--main-color);
   z-index: 11;
-
 }
 
 .navbottombar {
@@ -41,13 +97,13 @@ nav {
 
 .navright{
   justify-content:flex-end;
-  margin-right:20px ;
-  padding-top: 13px;
+  margin-right:30px ;
+  padding-top: 12px;
 }
 
 .navleft {
   justify-content: flex-start;
-  padding-top: 13px;
+  padding-top: 12px;
 }
 
 .HomeButton {
@@ -63,17 +119,8 @@ nav {
 ul li{
   list-style: none;
 }
-
 li{
   margin-left: 20px;
-}
-
-h1 {
-  font-size: var(--large-font);
-  color: var(--main-color);
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 a {
@@ -81,9 +128,13 @@ a {
   color: var(--main-color);
   text-decoration: none;
 }
+
+
 /*
- Drop down Button 
- */
+######################
+#   Ignore for now   #
+######################
+*/
 
 .shopdrop {
   display: none;
@@ -92,114 +143,3 @@ a {
 .Searchbar {
   display:none;
 }
-
-/*
-###################Seg1 Griding##############################
-*/
-
-
-.Top_page_content {
-  position: relative;
-  display:grid;
-  grid-template-columns: 1fr 1fr;
-  z-index: -1;
-}
-
-
-/* FUCKING WIZADRY WTF */
-.Top_page_content .col--1h {
-  height: 95vh;
-}
-
-.TPC_Left {
-  grid-column: 1/1;
-}
-
-.TPC_Left img {
-  width: 100%;
-}
-
-img {
-  max-width: 100%;
-}
-
-.TPC_Right {
-  padding-left: 70px;
-  padding-right: 70px;
-  grid-column: 2/2;
-  justify-content: center;
-}
-.TPC_Right > h1 {
-  padding-top:40vh ;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*
-Assume this will not need changed
-*/
-
-
