--- a/Project/assets/css/test.css
+++ b/Project/assets/css/test.css
@@ -3,10 +3,20 @@
   --main-font:"Comfortaa Light";
   --secondary-font:"Book Antiqua";
   --large-font:53px;
+  --nav-height:71.5px;
+  --break-height:45px; /* Guessitmate */
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body {
   margin:0;
+}
+
+img {
+  max-width: 100%;
 }
 
 h1 {
@@ -15,16 +25,19 @@ h1 {
   font-weight: 750;
 }
 
+.segement-1 .col--100vh {
+  height: calc(100vh - var(--nav-height) - var(--break-height));
+}
+
 .segement-1 {
   position: relative;
   display: grid;
-  height: 94vh;
   grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
 }
 
 .col1 > img {
   object-fit: cover;
-  max-height: 94vh ;
+  height: 100% ;
   width: 100%;
 }
 
@@ -44,5 +57,86 @@ h1 {
   margin: 0;
 }
 
+/*
+######################
+#     Nav bar        #
+######################
+*/
+
+nav {
+  position: fixed;
+  display:flex;
+  width: 100%;
+  background-color: #ffffff;
+  z-index: 10;
+}
+
+.navbar{
+  display: flex;
+  width:100%;
+  justify-content:center;
+}
+
+.navtopbar, .navbottombar {
+  position:absolute;
+  top: 10px;
+  left:0;
+  width:100%;
+  height:1px;
+  background: var(--main-color);
+  z-index: 11;
+}
+
+.navbottombar {
+  top:70px;
+  bottom:0;
+}
+
+.navright{
+  justify-content:flex-end;
+  margin-right:20px ;
+  padding-top: 12px;
+}
+
+.navleft {
+  justify-content: flex-start;
+  padding-top: 12px;
+}
+
+.HomeButton {
+  margin-left: auto;
+  margin-right: auto;
+  position: absolute;
+  left: 50%;
+  top:40px;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+}
+
+ul li{
+  list-style: none;
+}
+li{
+  margin-left: 20px;
+}
+
+a {
+  font-family: var(--main-font);
+  color: var(--main-color);
+  text-decoration: none;
+}
 
 
+/*
+######################
+#   Ignore for now   #
+######################
+*/
+
+.shopdrop {
+  display: none;
+}
+
+.Searchbar {
+  display:none;
+}
